// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InStoreOfferUnavailableModal should render 1`] = `
<View
  accessibilityLabel="in-store-offer-activated-modal-container"
  accessible={true}
  style={
    Object {
      "alignItems": "center",
    }
  }
  testID="in-store-offer-activated-modal-container"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 24,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 60,
            "width": 60,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "alignItems": "center",
              "borderBottomLeftRadius": 60,
              "borderBottomRightRadius": 60,
              "borderTopLeftRadius": 60,
              "borderTopRightRadius": 60,
              "height": "100%",
              "justifyContent": "center",
              "width": "100%",
            },
          ]
        }
      >
        <FastImageView
          accessibilityLabel="brand-logo-image"
          accessible={true}
          onFastImageError={[Function]}
          onFastImageLoad={[Function]}
          onFastImageLoadEnd={[Function]}
          onFastImageLoadStart={[Function]}
          resizeMode="cover"
          source={
            Object {
              "priority": "high",
              "uri": "https://www.movistar.es/estaticos/img/ico-app-mi-movistar-2017.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="brand-logo-image"
        />
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#262C2F",
          "fontFamily": "SFProDisplay-Heavy",
          "fontSize": 22,
          "lineHeight": 26,
          "marginBottom": 0,
          "marginLeft": 12,
          "marginRight": 12,
          "marginTop": 0,
        }
      }
    >
      +
    </Text>
    <Text
      accessibilityLabel="icon-text"
      accessible={true}
      allowFontScaling={false}
      selectable={false}
      style={
        Array [
          Object {
            "color": "#909BA0",
            "fontSize": 60,
          },
          undefined,
          Object {
            "fontFamily": "sywmax",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
      testID="icon-text"
    >
      
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#262C2F",
          "fontFamily": "SFProDisplay-Bold",
          "fontSize": 20,
          "lineHeight": 30,
        },
        Object {
          "color": "#262C2F",
          "textAlign": "center",
        },
      ]
    }
    type="titleHeader"
  >
    Starbucks
     offer isn't available now
  </Text>
  <View
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    >
      Please try again later. Or explore other participating locations nearby. 🛍️
    </Text>
  </View>
  <View
    accessibilityLabel="in-store-offer-activated-modal-action-btn"
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="in-store-offer-activated-modal-action-btn"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#0066CC",
            "borderBottomLeftRadius": 30,
            "borderBottomRightRadius": 30,
            "borderTopLeftRadius": 30,
            "borderTopRightRadius": 30,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingBottom": 8,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 8,
          },
          Object {
            "height": 50,
            "marginTop": 44,
            "minWidth": "90%",
          },
        ]
      }
    >
      <View
        style={false}
      >
        <Text
          style={
            Array [
              Object {
                "color": "#909BA0",
                "fontFamily": "SFProDisplay-Medium",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 14,
                  "textAlign": "center",
                },
                Object {
                  "fontFamily": "SFProDisplay-Medium",
                  "fontSize": 16,
                  "width": "100%",
                },
                undefined,
              ],
            ]
          }
        >
          Got it!
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`InStoreOfferUnavailableModal should render without brand logo 1`] = `
<View
  accessibilityLabel="in-store-offer-activated-modal-container"
  accessible={true}
  style={
    Object {
      "alignItems": "center",
    }
  }
  testID="in-store-offer-activated-modal-container"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 24,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 60,
            "width": 60,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        SYWIconDark
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#262C2F",
          "fontFamily": "SFProDisplay-Heavy",
          "fontSize": 22,
          "lineHeight": 26,
          "marginBottom": 0,
          "marginLeft": 12,
          "marginRight": 12,
          "marginTop": 0,
        }
      }
    >
      +
    </Text>
    <Text
      accessibilityLabel="icon-text"
      accessible={true}
      allowFontScaling={false}
      selectable={false}
      style={
        Array [
          Object {
            "color": "#909BA0",
            "fontSize": 60,
          },
          undefined,
          Object {
            "fontFamily": "sywmax",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
      testID="icon-text"
    >
      
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#262C2F",
          "fontFamily": "SFProDisplay-Bold",
          "fontSize": 20,
          "lineHeight": 30,
        },
        Object {
          "color": "#262C2F",
          "textAlign": "center",
        },
      ]
    }
    type="titleHeader"
  >
    Starbucks
     offer isn't available now
  </Text>
  <View
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 16,
          "textAlign": "center",
        }
      }
    >
      Please try again later. Or explore other participating locations nearby. 🛍️
    </Text>
  </View>
  <View
    accessibilityLabel="in-store-offer-activated-modal-action-btn"
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="in-store-offer-activated-modal-action-btn"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#0066CC",
            "borderBottomLeftRadius": 30,
            "borderBottomRightRadius": 30,
            "borderTopLeftRadius": 30,
            "borderTopRightRadius": 30,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingBottom": 8,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 8,
          },
          Object {
            "height": 50,
            "marginTop": 44,
            "minWidth": "90%",
          },
        ]
      }
    >
      <View
        style={false}
      >
        <Text
          style={
            Array [
              Object {
                "color": "#909BA0",
                "fontFamily": "SFProDisplay-Medium",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 14,
                  "textAlign": "center",
                },
                Object {
                  "fontFamily": "SFProDisplay-Medium",
                  "fontSize": 16,
                  "width": "100%",
                },
                undefined,
              ],
            ]
          }
        >
          Got it!
        </Text>
      </View>
    </View>
  </View>
</View>
`;
